Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-44173

[WIN32] print_backtrace() fails to lookup symbols

    XMLWordPrintable

Details

    • Untriaged
    • 1
    • Unknown

    Description

      When implementing MB-43818, it was observed that the print_backtrace function doesn't symbolify any symbols in a backtrace from test NonNegativeCounterTest.ThrowExceptionPolicy - e.g.

      [ RUN      ] NonNegativeCounterTest.ThrowExceptionPolicy
      [       OK ] NonNegativeCounterTest.ThrowExceptionPolicy (1 ms)
      [ RUN      ] NonNegativeCounterTest.ThrowExceptionPolicyBacktrace
      ..\platform\tests\atomic\non_negative_counter_test.cc(134): error: Value of: backtrace.find("platform-non_negative_counter-test") != std::string::npos
        Actual: false
      Expected: true
      when verifying exception backtrace: [0x00007FF6572B89BE]
      [0x00007FF6572A9267]
      [0x00007FF6572BB0E7]
      [0x00007FF6572B2D64]
      [0x00007FF6572C006C]
      [0x00007FF6572BFE6F]
      [0x00007FF657302B99]
      [0x00007FF657302E5D]
      [0x00007FF6573039B4]
      [0x00007FF6572C018C]
      [0x00007FF6572C001F]
      [0x00007FF6573030FB]
      [0x00007FF657319B19]
      [0x00007FF657318A48]
      [0x00007FF85D008364]
      [0x00007FF85F385E91]
       
      [  FAILED  ] NonNegativeCounterTest.ThrowExceptionPolicyBacktrace (2 ms)
      NonNegativeCounterTest.ThrowExceptionPolicy
      

      (Note: This isn't believed to be related to the changes for MB-43818; the testing of it just highlighted the problem.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty