MB-44173: Create cb::backtrace::initialize

It looks like it is too late to call SymInitialize from our
signal handler, but given that we don't load any libraries
with LoadLibrary we can just initialize it as part of normal
process startup.

Change-Id: I83d0f609f0a9c2bda319d2ceb51bc94f55531695
Reviewed-on: http://review.couchbase.org/c/platform/+/145404
Reviewed-by: Jim Walker <jim@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>